# Innate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Innate.sln  README.md  VS_ONLY_CMakePresets.json  setup.bat  setup.sh
Innate/: CMakeLists.txt  Innate.vcxproj  Innate.vcxproj.filters
Innate/src/: Innate.h
Innate/src/Innate/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Sandbox.cpp
